--- a/public/index.html
+++ b/public/index.html
@@ -79,6 +79,6 @@
     <script>window.jQuery || document.write('<script src="lib/jquery/jquery-1.11.2.min.js"><\/script>')</script>
 
     <script src="lib/bootstrap/bootstrap.js"></script> -->
-    <script src="bundle.js"></script>
+    <script src="js/bundle.js"></script>
   </body>
 </html>
