--- a/public/index.html
+++ b/public/index.html
@@ -12,73 +12,12 @@
   </head>
 
   <body>
-    <div class="container" id="main">
-      <!-- 
-      <div class="row">
-        <h1>Dev Shop</h1>
-      </div>
-
-      <div class="row">
-        <h2>Add a developer</h2>
-        <form class="form-inline" role="form">
-          <div class="form-group">
-            <input type="text" placeholder="GitHub Username" class="form-control">
-          </div>
-          <div class="form-group">
-            <input type="text" placeholder="Price" class="form-control">
-          </div>
-          <button type="submit" class="btn btn-success">Add</button>
-        </form>
-      </div>
-
-      <div class="cart row">
-        <h2>Cart</h2>
-        <table class="table">
-          <thead>
-            <tr>
-              <th>Username</th>
-              <th>Price</th>
-              <th></th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr class="product">
-              <td>brenoc</td>
-              <td>$224</td>
-              <td><button class="btn btn-danger pull-right">Remove</button></td>
-            </tr>
-            <tr class="product">
-              <td>firstdoit</td>
-              <td>$416</td>
-              <td><button class="btn btn-danger pull-right">Remove</button></td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-
-      <div class="totalizer row">
-        <div class="col-sm-5">
-          <div class="row">
-            <table class="table">
-              <tbody>
-                <tr class="total">
-                  <td>Total</td>
-                  <td>$640</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
-      </div>
-       -->
-
+    <div id="main">
+      
     </div> <!-- /container -->
 
-    <!-- <script src="http://fb.me/react-0.10.0.min.js"></script>
-
     <script>window.jQuery || document.write('<script src="lib/jquery/jquery-1.11.2.min.js"><\/script>')</script>
-
-    <script src="lib/bootstrap/bootstrap.js"></script> -->
+    
     <script src="js/bundle.js"></script>
   </body>
 </html>
