--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,31 @@
   </head>
 
   <body>
+
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/">Dev Shop</a>
+            </div>
+        </div>
+        <!-- /.container -->
+    </nav>
+
+    <header class="main-header">
+        <div class="container">
+            <h1>Developer Shop</h1>
+            <p>Get the Right Developer for your Right Project.</p>
+        </div>
+    </header>
+
     <div id="main">
-      
     </div> <!-- /container -->
 
     <script>window.jQuery || document.write('<script src="https://code.jquery.com/jquery-2.2.0.min.js"><\/script>')</script>
