--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,8 @@
 
   <body>
 
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <!-- <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
@@ -27,7 +26,6 @@
                 <a class="navbar-brand" href="/">Dev Shop</a>
             </div>
         </div>
-        <!-- /.container -->
     </nav>
 
     <header class="main-header">
@@ -35,7 +33,7 @@
             <h1>Developer Shop</h1>
             <p>Get the Right Developer for your Right Project. </p>
         </div>
-    </header>
+    </header> -->
 
     <div id="main">
     </div> <!-- /container -->
