--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Coding Challenge VTEX</title>
+    <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -13,27 +13,6 @@
   </head>
 
   <body>
-
-    <!-- <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="/">Dev Shop</a>
-            </div>
-        </div>
-    </nav>
-
-    <header class="main-header">
-        <div class="container">
-            <h1>Developer Shop</h1>
-            <p>Get the Right Developer for your Right Project. </p>
-        </div>
-    </header> -->
 
     <div id="main">
     </div> <!-- /container -->
